Bug 59428 - mirrored page layout is not actually mirrored
Summary: mirrored page layout is not actually mirrored
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.1.2.3 release
Hardware: x86 (IA32) All
: high blocker
Assignee: Michael Stahl
URL:
Whiteboard: target:4.1.0 target:4.0.0.2
Keywords: regression
: 61113 (view as bug list)
Depends on:
Blocks:
 
Reported: 2013-01-15 16:11 UTC by László Németh
Modified: 2017-06-03 13:10 UTC (History)
11 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot in LibO 4.0 beta 2 (as in RC1) (18.17 KB, image/png)
2013-01-15 21:37 UTC, László Németh
Details
Test file with mirrored page layout (8.81 KB, application/vnd.oasis.opendocument.text)
2013-01-15 21:38 UTC, László Németh
Details
good ruler, bad page margins of the first page (4.72 KB, image/png)
2013-01-23 10:16 UTC, László Németh
Details

Note You need to log in before you can comment on or make changes to this bug.
Description László Németh 2013-01-15 16:11:29 UTC
Documents with mirrored page layout are displayed and exported with “right and left” page layout. Test: set mirrored page layout in Format->Page, and change the left margin to eg. 5cm. There is no difference in LibreOffice 4. (LibreOffice 3.6 works well).

Test document: http://www.numbertext.org/logo/logofuzet.odt.
Comment 1 László Németh 2013-01-15 16:12:04 UTC
Maybe a related problem: Bug 59270
Comment 2 László Németh 2013-01-15 16:13:13 UTC
Maybe a blocker.
Comment 3 Joel Madero 2013-01-15 16:58:02 UTC
The option mirrored layout is already set on the document, are we supposed to change it to something else?
Comment 4 László Németh 2013-01-15 17:13:37 UTC
(In reply to comment #3)
> The option mirrored layout is already set on the document, are we supposed
> to change it to something else?

No, maybe it is related to the problem. THe test docoument is mirrored in older LibreOffice versions, but it has right-left layout in LibreOffice 4.
Comment 5 Joel Madero 2013-01-15 17:58:49 UTC
I am unable to confirm this on 4.1 master (Build ID: 8bab53a19828b888ca689dafaf98aa3ba82228a)

When I open the document it is already set to mirrored. When I change the margins I also see the difference. I converted 5cm to ~ 1.97 inches.
Comment 6 Ruslan Kabatsayev 2013-01-15 20:54:29 UTC
I have crash with this document in 4.0.x and 4.1.x... but not in 3.6.5.0+
Comment 7 László Németh 2013-01-15 21:37:47 UTC
Created attachment 73124 [details]
Screenshot in LibO 4.0 beta 2 (as in RC1)

also in Version 4.0.0.1 (Build ID: 527dba6f6e0cfbbc71bd6e7b88a52699bb48799)
Comment 8 László Németh 2013-01-15 21:38:37 UTC
Created attachment 73125 [details]
Test file with mirrored page layout
Comment 9 László Németh 2013-01-15 21:40:40 UTC
I have added a small test file and a screenshot.
Comment 10 László Németh 2013-01-15 21:54:01 UTC
(In reply to comment #6)
> I have crash with this document in 4.0.x and 4.1.x... but not in 3.6.5.0+

Ruslan: I had edited it with 4.0 beta 2 on Linux, but I had to change to 3.6 because of the mirroring problem. Could you specify your platform or send a crash log? Thanks.
Comment 11 Not Assigned 2013-01-17 21:40:06 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=8d301533f0c7764c94f8ad72fced2ce9d9de7585

fdo#59428: SwPageDesc::GetUseOn(): mask PD_FIRSTSHARE.



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 12 Jorendc 2013-01-17 21:46:33 UTC
@Michael: Because of the patch I assign you to this bug and set bug status to ASSIGNED.
Comment 13 Michael Stahl 2013-01-17 21:51:07 UTC
regression caused by new FirstPage feature;
there was some comparison == PD_MIRROR (0x07) but the value
was 0x107 (had the PD_FIRSTSHARE) bit set so the comparison
failed and nothing was mirrored.
Comment 14 Not Assigned 2013-01-18 14:44:33 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-4-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=c41675a7d13dac64540ad420f905e80dbcbc023d&h=libreoffice-4-0

fdo#59428: SwPageDesc::GetUseOn(): mask PD_FIRSTSHARE.


It will be available in LibreOffice 4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 15 László Németh 2013-01-23 10:14:27 UTC
Recent master has got a strong behavior: first mirrored page doesn’t reflect the margin settings, despite of the same default page style.

Test:
1. open a new text document
2. set mirrored page style
3. modify margin settings -> it is no effect for the first page (only for its ruler, see the attached screenshot)
Comment 16 László Németh 2013-01-23 10:16:07 UTC
Created attachment 73504 [details]
good ruler, bad page margins of the first page
Comment 17 Michael Stahl 2013-01-23 14:51:08 UTC
yay, comment #15 is a regression from my fix...
Comment 18 Not Assigned 2013-01-23 18:42:19 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=da1398c503784086ecd0a10dd8e809069d649653

fdo#59428: SwDoc::ChgPageDesc: always copy to first-pagedesc



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 19 Michael Stahl 2013-01-23 18:44:45 UTC
after the first fix it takes the right branch but that branch was still
missing the copying of attributes to the first-page.
hope it's really fixed now.
Comment 20 Not Assigned 2013-01-24 09:00:07 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-4-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=f5dc652c6d3157d41d20dc1baf3cfc92907dc6b0&h=libreoffice-4-0

fdo#59428: SwDoc::ChgPageDesc: always copy to first-pagedesc


It will be available in LibreOffice 4.0.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 21 Jorendc 2013-02-19 19:09:36 UTC
*** Bug 61113 has been marked as a duplicate of this bug. ***
Comment 22 Adriano Afonso 2013-10-17 20:10:21 UTC
Hello there
After some hard testing, I decided to reopen this bug, specially because he have the most accurate name of the problem. But if there is a better description, fell free to correct please (specially you Michael Stahl).

This bug appear in version 4.1.2.3 and some versions earlier (cant figure out which one exactly, but probably 4.1.2.x and/or 4.1.x.x). Does not affect 4.0.3.3.

Tested on:
Windows 7 Ultimate + intel 
Mac OS X 10.8.5 + intel

To test the bug is extremely simple, just open any of the doc here https://wiki.documentfoundation.org/Documentation/Publications and you can see that the Footer is always like the left page.
The right page should have the page title aligned to the right and number to the left (inverted in relation to the left).

Any of my documents (and other users) configured with mirrored page layout have this problem, in both header and footer.
Comment 23 Jean Weber 2013-12-16 04:05:02 UTC
I am experiencing the same bug in v4.1.4.2 and it was there is earlier 4.1 releases. I open any of the LO user guide files (individual chapters or full books) and make my choices on the footers tab of the page styles, it works fine as long as the document remains open, but the settings are not retained when the file is saved, closed, and reopened.

The user guide documents use custom page styles. In the past we had some problems with custom styles that did not occur with the built in styles. I have not tested this to see if the problem occurs in the built in styles as well as our custom styles.

I am using LO on Mac OS X 10.9.
Comment 24 Michael Stahl 2013-12-21 00:01:33 UTC
guess i deserved this re-opening (comment #22 and comment #23)
since i introduced the other bug :(

but it's a different bug from this and is tracked as bug 70232.
Comment 25 Vitaly 2014-05-08 08:03:43 UTC
I do not agree that this issue is closed. The bug is still present and it is a stop-factor to use LO newer, than 4.0.5.

See my comments to Bug 70232.

Kind regards.
Comment 26 Vitaly 2014-06-21 18:24:48 UTC
This bug is still present in 4.2.5 (tested on ubuntu 14.04 vanilla deb from libreoffice.org). This must be in a list of most annoying bugs and marked as high blocker. 

4.2.5 is not ready for enterprise deployments because of this bug.
Comment 27 Michael Stahl 2014-08-12 17:10:18 UTC
this bug was fixed long ago, please file a new bug if you experience superficially similar symptoms
Comment 28 vihsa 2017-06-03 13:10:15 UTC
according to comment 27, verified, hence status change.