fdo#59428: SwPageDesc::GetUseOn(): mask PD_FIRSTSHARE.

There is at least one call in SwDoc::ChgPageDesc() checks if the result
equals PD_MIRROR.

(regression from fa0f42bafbf24e9141ddee728b160b5ab47077f2)

Change-Id: Id37ca46eec5885f7f5230337d8a8a594845f7842
(cherry picked from commit 8d301533f0c7764c94f8ad72fced2ce9d9de7585)
Reviewed-on: https://gerrit.libreoffice.org/1748
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>